Add a link to #top of the page

--- a/views/statistiche.tmpl
+++ b/views/statistiche.tmpl
@@ -32,12 +32,12 @@
 </head>
 <body>
 <div align="center">
-<h1>Statistiche OpenStreetMap Italia ${date}</h1>
+<a name="top"><h1>Statistiche OpenStreetMap Italia ${date}</h1></a>
 <ul id="links" style="display: inline;"></ul>
 <ul id="tagshow"></ul>
 <h2>Numero di primitive</h2>
 <div py:def="feature(name, data)" name="${name}" class="linked primitive">
-<a name="${name}"><h3>${name}</h3></a>
+<a name="${name}"><h3>${name} <small><a href="#top">&uarr;</a></small></h3></a>
 <table>
 <tr>
   <th>Posizione</th>
@@ -57,11 +57,11 @@
 <py:choose test="type(value)">
   <py:when test="tuple">
     <py:with vars="value=';'.join(value)">
-      <a name="${key}=${value}"><h4>${key}=${value}</h4></a>
+      <a name="${key}=${value}"><h4>${key}=${value} <small><a href="#top">&uarr;</a></small></h4></a>
     </py:with>
   </py:when>
   <py:otherwise>
-    <a name="${key}=${value}"><h4>${key}=${value}</h4></a>
+    <a name="${key}=${value}"><h4>${key}=${value} <small><a href="#top">&uarr;</a></small></h4></a>
   </py:otherwise>
 </py:choose>
 <table>
@@ -85,7 +85,7 @@ ${feature('Relazioni', relations)}
 <h2>Statistiche per Tag</h2>
 <py:for each="tag in sorted(tags.keys())">
   <div name="${tag}" class="linked">
-  <a name="${tag}"><h3>${tag}</h3></a>
+  <a name="${tag}"><h3>${tag} <small><a href="#top">&uarr;</a></small></h3></a>
   <py:for each="val in sorted(tags[tag].keys())">
   ${key(tag, val, tags[tag][val])}
   </py:for>
