--- a/views/statistiche.tmpl
+++ b/views/statistiche.tmpl
@@ -7,27 +7,46 @@
 <script>
 <!--
     $(document).ready(function() {
+        $('.primitive').hide();
+        $('.feature').hide();
+        $('.linked').hide();
         $('.linked').each(function(index) {
             if ($(this).hasClass("primitive")) {
-                $("ul#links").append("<li style=\"display:inline; margin:5px;\"><a href=\"#"+$(this).attr("name")+"\">"+$(this).attr("name")+"</a></li>");
+                $("ul#links").append("<li style=\"display:inline; margin:5px;\"><a href=\"#\" onclick=\"javascript:showprimitive('"+$(this).attr("name")+"');\">"+$(this).attr("name")+"</a></li>");
             } else {
-                $("ul#links").append("<li style=\"display:inline; margin:5px;\"><a href=\"#\" onclick=\"javascript:showtags('"+$(this).attr("name")+"');\">"+$(this).attr("name")+"</a></li>");
+                $("ul#links").append("<li style=\"display:inline; margin:5px;\"><a href=\"#\" onclick=\"javascript:showtaglist('"+$(this).attr("name")+"');\">"+$(this).attr("name")+"</a></li>");
             }
         });
     });
 
-    function showtags(tag) {
+    function showprimitive(name) {
+        $('#tagshow').fadeOut('slow', function(){
+            $('.primitive').fadeOut('slow');
+            $('div[name="'+name+'"]').fadeIn('slow');
+        });
+    }
+
+    function showtaglist(tag) {
         var i = 0;
+        $('.linked').fadeOut('slow');
         $("ul#tagshow").fadeOut('slow', function() {
             $("ul#tagshow").replaceWith('<ul id="tagshow"></ul>');
             $("div[name='"+tag+"']").children("div").children("a").each(function(index) {
                 i += 1;
-                $("ul#tagshow").append("<li style=\"display:inline; margin:5px;\"><a href=\"#"+$(this).attr("name")+"\">"+$(this).attr("name")+"</a></li>");
+                $("ul#tagshow").append("<li style=\"display:inline; margin:5px;\"><a href=\"#\" onclick=\"javascript:showtag('"+$(this).attr("name")+"');\">"+$(this).attr("name")+"</a></li>");
                 if ((i % 5) == 0) {
-                    $("ul#tagshow").append("<br />");
+                    $("ul#tagshow").append("<br /"+">");
                 }
             });
             $("ul#tagshow").fadeIn('slow');
+        });
+    }
+
+    function showtag(tag) {
+        $('.linked').hide();
+        $('.feature').hide();
+        $('a[name="'+tag+'"]').parents('.linked').fadeIn('slow', function() {
+            $('a[name="'+tag+'"]').parent('.feature').show();
         });
     }
 //-->
