Fix charset issues (at least, try to)

--- a/views/statistiche.tmpl
+++ b/views/statistiche.tmpl
@@ -2,6 +2,7 @@
       xmlns:py="http://genshi.edgewall.org/"
       lang="it">
 <head>
+<meta http-equiv="Content-Type" content="text/xhtml; charset=utf-8" />
 <title>Statistiche OSM Italia ${date}</title>
 <script src="js/jquery.min.js"></script>
 <script>
