Implement table sorting using jQuery's tablesorter plugin

--- a/views/statistiche.tmpl
+++ b/views/statistiche.tmpl
@@ -5,6 +5,7 @@
 <meta http-equiv="Content-Type" content="text/xhtml; charset=utf-8" />
 <title>Statistiche OSM Italia ${date}</title>
 <script src="js/jquery.min.js"></script>
+<script src="js/jquery.tablesorter.min.js"></script>
 <script>
 <!--
     $(document).ready(function() {
@@ -18,6 +19,7 @@
                 $("ul#links").append("<li style=\"display:inline; margin:5px;\"><a href=\"#\" onclick=\"javascript:showtaglist('"+$(this).attr("name")+"');\">"+$(this).attr("name")+"</a></li>");
             }
         });
+        $('table').tablesorter();
     });
 
     function showprimitive(name) {
@@ -52,6 +54,7 @@
     }
 //-->
 </script>
+<link rel="stylesheet" type="text/css" href="osmstats_style.css" />
 </head>
 <body>
 <div align="center">
@@ -61,12 +64,15 @@
 <!--<h2>Numero di primitive</h2>-->
 <div py:def="feature(name, data)" name="${name}" class="linked primitive">
 <a name="${name}"></a><h3>${name} <small><a href="#top">&uarr;</a></small></h3>
-<table style="display:inline;">
+<table class="tablesorter">
+<thead>
 <tr>
   <th>Posizione</th>
   <th>Utente</th>
   <th>Totale</th>
 </tr>
+</thead>
+<tbody>
 <py:for each="count, pair in data">
 <tr>
   <td>${count + 1}</td>
@@ -74,6 +80,7 @@
   <td>${pair[1]}</td>
 </tr>
 </py:for>
+</tbody>
 </table>
 </div>
 <div py:def="key(key, value, data)" class="feature">
@@ -87,12 +94,15 @@
     <a name="${key}=${value}"></a><h4>${key}=${value} <small><a href="#top">&uarr;</a></small></h4>
   </py:otherwise>
 </py:choose>
-<table>
+<table class="tablesorter">
+<thead>
 <tr>
   <th>Posizione</th>
   <th>Utente</th>
   <th>Totale</th>
 </tr>
+</thead>
+<tbody>
 <py:for each="count, pair in data">
 <tr>
   <td>${count + 1}</td>
@@ -100,6 +110,7 @@
   <td>${pair[1]}</td>
 </tr>
 </py:for>
+</tbody>
 </table>
 </div>
 ${feature('Nodi', nodes)}
