--- a/views/statistiche.tmpl
+++ b/views/statistiche.tmpl
@@ -23,8 +23,8 @@
     });
 
     function showprimitive(name) {
-        $('#tagshow').fadeOut('slow', function(){
-            $('.primitive').fadeOut('slow');
+        $('.linked').fadeOut('slow', function() {
+            $('#tagshow').fadeOut('slow');
             $('div[name="'+name+'"]').fadeIn('slow');
         });
     }
