Remove old (and no more used) "go to top" links

--- a/views/statistiche.tmpl
+++ b/views/statistiche.tmpl
@@ -58,11 +58,11 @@
 </head>
 <body>
 <div align="center">
-<a name="top"><h1>Statistiche OpenStreetMap Italia ${date}</h1></a>
+<h1>Statistiche OpenStreetMap Italia ${date}</h1>
 <ul id="links" style="display: inline;"></ul>
 <ul id="tagshow"></ul>
 <div py:def="feature(name, data)" name="${name}" class="linked primitive">
-<a name="${name}"></a><h3>${name} <small><a href="#top">&uarr;</a></small></h3>
+<a name="${name}"></a><h3>${name}</h3>
 <table class="tablesorter">
 <thead>
 <tr>
@@ -97,11 +97,11 @@
 <py:choose test="type(value)">
   <py:when test="tuple">
     <py:with vars="value=';'.join(value)">
-      <a name="${key}=${value}"></a><h4>${key}=${value} <small><a href="#top">&uarr;</a></small></h4>
+      <a name="${key}=${value}"></a><h4>${key}=${value}</h4>
     </py:with>
   </py:when>
   <py:otherwise>
-    <a name="${key}=${value}"></a><h4>${key}=${value} <small><a href="#top">&uarr;</a></small></h4>
+    <a name="${key}=${value}"></a><h4>${key}=${value}</h4>
   </py:otherwise>
 </py:choose>
 <table class="tablesorter">
@@ -128,7 +128,7 @@ ${feature('Ways', ways)}
 ${feature('Relazioni', relations)}
 <py:for each="tag in sorted(tags.keys())">
   <div name="${tag}" class="linked">
-  <a name="${tag}"></a><h3>${tag} <small><a href="#top">&uarr;</a></small></h3>
+  <a name="${tag}"></a><h3>${tag}</h3>
   <py:for each="val in sorted(tags[tag].keys())">
   ${key(tag, val, tags[tag][val])}
   </py:for>
