Complete commit for showing ups/downs

--- a/views/statistiche.tmpl
+++ b/views/statistiche.tmpl
@@ -66,7 +66,8 @@
 <table class="tablesorter">
 <thead>
 <tr>
-  <th colspan="2">Posizione</th>
+  <th>Posizione</th>
+  <th>&nbsp;</th>
   <th>Utente</th>
   <th>Totale</th>
 </tr>
@@ -108,6 +109,7 @@
 <thead>
 <tr>
   <th>Posizione</th>
+  <th>&nbsp;</th>
   <th>Utente</th>
   <th>Totale</th>
 </tr>
@@ -116,6 +118,17 @@
 <py:for each="count, pair in data">
 <tr>
   <td>${count + 1}</td>
+  <py:choose test="">
+    <py:when test="pos_tags[key][val][pair[0]] &lt; 0">
+      <td><img src="img/down.png" /> ${abs(pos_primitives[name][pair[0]])}</td>
+    </py:when>
+    <py:when test="pos_tags[key][val][pair[0]] &gt; 0">
+      <td><img src="img/up.png" /> ${pos_primitives[name][pair[0]]}</td>
+    </py:when>
+    <py:when test="pos_tags[key][val][pair[0]] == 0">
+      <td><img src="img/stable.png" /></td>
+    </py:when>
+  </py:choose>
   <td>${pair[0]}</td>
   <td>${pair[1]}</td>
 </tr>
