--- a/views/statistiche.tmpl
+++ b/views/statistiche.tmpl
@@ -95,9 +95,7 @@
 </table>
 </div>
 <div py:def="key(key, value, data)" class="feature">
-<py:choose test="type(value)">
-  <a name="${key}=${value}"></a><h4>${key}=${value}</h4>
-</py:choose>
+<a name="${key}=${value}"></a><h4>${key}=${value}</h4>
 <table class="tablesorter">
 <thead>
 <tr>
@@ -112,13 +110,13 @@
 <tr>
   <td>${count + 1}</td>
   <py:choose test="">
-    <py:when test="pos_tags[key][val][pair[0]] &lt; 0">
-      <td><img src="img/down.png" /> ${abs(pos_primitives[name][pair[0]])}</td>
+    <py:when test="pos_tags[key][value][pair[0]] &lt; 0">
+      <td><img src="img/down.png" /> ${abs(pos_tags[key][value][pair[0]])}</td>
     </py:when>
-    <py:when test="pos_tags[key][val][pair[0]] &gt; 0">
-      <td><img src="img/up.png" /> ${pos_primitives[name][pair[0]]}</td>
+    <py:when test="pos_tags[key][value][pair[0]] &gt; 0">
+      <td><img src="img/up.png" /> ${pos_tags[key][value][pair[0]]}</td>
     </py:when>
-    <py:when test="pos_tags[key][val][pair[0]] == 0">
+    <py:when test="pos_tags[key][value][pair[0]] == 0">
       <td><img src="img/stable.png" /></td>
     </py:when>
   </py:choose>
