Fix other small glitches

--- a/views/key.tmpl
+++ b/views/key.tmpl
@@ -33,7 +33,8 @@
 <div align="center">
 <h1>Statistiche OpenStreetMap Italia ${date}</h1>
 <h2>Key:${key}</h2>
-<ul id="links" style="display: inline;"></ul>
+<small><a href="${prefix}_stats.html">Go back</a></small>
+<ul id="links" style="padding: 0px;"></ul>
 <br />
 <py:def function="showval(value, data)">
 <div name="${key}=${value}" class="feature">
