--- a/html/osmstats_style.css
+++ b/html/osmstats_style.css
@@ -1,38 +1,91 @@
+/* font-face */
+
+
+/* titles */
+body {
+	/*background-image: url("img/osm.png"); */
+	background-position: top left;
+	background-repeat: no-repeat;
+	background-attachment:fixed;
+}
+/* titles */
+h1 {
+	font-family: sans-serif;
+	color: green;
+	font-size: 200%;
+}
+
+/* lnks and keywords */
+a > * {
+	opacity: 1;
+
+	transition-property: opacity; /*standard*/
+	transition-duration: 0.7s;
+
+	-webkit-transition-property: opacity; /*safari*/
+	-webkit-transition-duration: 0.7s;
+
+	-o-transition-property: opacity;      /*opera*/
+	-o-transition-duration: 0.7s;
+
+	-moz-transition-property: opacity;    /*firefox*/
+	-moz-transition-duration: 0.7s;
+}
+
+ul:hover > * {
+	opacity: 0.4;
+}
+
+li:hover {
+	opacity: 1;
+}
+
 /* tables */
 table.tablesorter {
 	font-family:arial;
-	background-color: #CDCDCD;
-	margin:10px 0pt 15px;
+	/*background-color: #CDCDCD;*/
+	border:1px solid #98bf21;
+	margin: 10px 0pt 15px;
 	font-size: 8pt;
 	text-align: left;
 }
+
 table.tablesorter thead tr th, table.tablesorter tfoot tr th {
-	background-color: #e6EEEE;
-	border: 1px solid #FFF;
+	background-color: #E6EEEE;
+	border: 1px solid #98BF21;
 	font-size: 8pt;
 	padding: 4px;
 }
+
 table.tablesorter thead tr .header {
 	background-image: url(img/bg.gif);
 	background-repeat: no-repeat;
 	background-position: center right;
+	border: 1px solid #98bf21;
 	cursor: pointer;
 }
+
 table.tablesorter tbody td {
 	color: #3D3D3D;
 	padding: 4px;
 	background-color: #FFF;
 	vertical-align: top;
+	border: 1px dotted #98bf21;
 }
+
 table.tablesorter tbody tr.odd td {
 	background-color:#F0F0F6;
 }
+
 table.tablesorter thead tr .headerSortUp {
 	background-image: url(img/asc.gif);
 }
+
 table.tablesorter thead tr .headerSortDown {
 	background-image: url(img/desc.gif);
 }
+
 table.tablesorter thead tr .headerSortDown, table.tablesorter thead tr .headerSortUp {
-background-color: #8dbdd8;
+	background-color: #8dbdd8;
+	border: 1px solid #98bf21;
 }
