Add some links to osm.org, fixes: #15

--- a/views/statistiche.tmpl
+++ b/views/statistiche.tmpl
@@ -65,7 +65,7 @@
       <td><img src="img/stable.png" /></td>
     </py:when>
   </py:choose>
-  <td>${pair[0]}</td>
+  <td><a href="http://www.openstreetmap.org/user/${pair[0]}" style="text-decoration:none;">${pair[0]}</a></td>
   <td>${pair[1]}</td>
 </tr>
 </py:for>
