--- a/views/key.tmpl
+++ b/views/key.tmpl
@@ -53,7 +53,7 @@
 <div name="${key}=${category}" class="feature">
 <py:choose test='category'>
   <py:when test='value'>
-    <a name="${key}=${value}"></a><h4>${key}=${value}</h4>
+    <a name="${key}=${value}" style="text-decoration:none;" href="http://wiki.openstreetmap.org/wiki/Tag:${key}=${value}"><h4>${key}=${value}</h4></a>
   </py:when>
   <py:otherwise>
     <a name="${category}" class='category'></a><h4><i>${category}</i></h4>
@@ -84,7 +84,7 @@
       <td><img src="img/stable.png" /></td>
     </py:when>
   </py:choose>
-  <td>${pair[0]}</td>
+  <td><a href="http://www.openstreetmap.org/user/${pair[0]}" style="text-decoration:none;">${pair[0]}</a></td>
   <td>${pair[1]}</td>
 </tr>
 </py:for>
