Put the &hellip; in a <tfoot>, fixes: #18

--- a/views/key.tmpl
+++ b/views/key.tmpl
@@ -89,9 +89,11 @@
 </tr>
 </py:for>
 <py:if test="split">
+<tfoot>
   <tr>
     <td colspan='4'><a href='${prefix}_${key}_full.html'>&hellip;</a></td>
   </tr>
+</tfoot>
 </py:if>
 </tbody>
 </table>
