Make every path absolute, will be handled by Bottle

--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -7,7 +7,7 @@
 <style type="text/css">
 @font-face {
     font-family: 'Fertigo';
-    src: url('fonts/fertigo.otf');
+    src: url('/fonts/fertigo.otf');
 }
 input {
     display: inline;
@@ -36,7 +36,7 @@ div#what {
     width: 70%;
 }
 </style>
-<script type="text/javascript" src="js/jquery.min.js"></script>
+<script type="text/javascript" src="/js/jquery.min.js"></script>
 <script type="text/javascript">
 <!--
     $(document).ready(function() {
@@ -54,10 +54,10 @@ div#what {
   <h1 class="fertigo">Statistiche OSM ${date}</h1>
   <br />
   <br />
-  <input type="image" title="Statistics" src="img/user.png"/>
-  <input type="image" title="Charts" src="img/chart.png" />
-  <input type="image" title="Source code" src="img/source.png" />
-  <input type="image" title="Credits" src="img/help.png" />
+  <input type="image" title="Statistics" src="/img/user.png"/>
+  <input type="image" title="Charts" src="/img/chart.png" />
+  <input type="image" title="Source code" src="/img/source.png" />
+  <input type="image" title="Credits" src="/img/help.png" />
   <br>
   <div id="what" class="fertigo"></div>
 </div>
