--- a/views/webgraph.tmpl
+++ b/views/webgraph.tmpl
@@ -58,7 +58,7 @@
     });
 //-->
 </script>
-<link rel="stylesheet" type="text/css" href="osmstats_style.css" />
+<link rel="stylesheet" type="text/css" href="/style/osmstats_style.css" />
 </head>
 <body>
 <div align="center">
