Fix "full" links in the template

--- a/views/key.tmpl
+++ b/views/key.tmpl
@@ -91,7 +91,7 @@
 <py:if test="split">
 <tfoot>
   <tr>
-    <td colspan='4'><a href='${prefix}_${key}_full.html'>&hellip;</a></td>
+    <td colspan='4'><a href='/stats/${key}/?prefix=${prefix}&amp;full=yes'>&hellip;</a></td>
   </tr>
 </tfoot>
 </py:if>
