--- a/views/statistiche.tmpl
+++ b/views/statistiche.tmpl
@@ -27,6 +27,7 @@
 <body>
 <div align="center">
 <h1>Statistiche OpenStreetMap Italia ${date}</h1>
+<small><a href='/'>Go back</a></small>
 <ul id="links" style="padding: 0px"></ul>
 <ul id="keylinks" style="padding: 0px">
 <py:for each="key in tags">
