--- a/views/webgraph.tmpl
+++ b/views/webgraph.tmpl
@@ -14,7 +14,7 @@
             x.preventDefault();
             //alert($(this).serialize());
             //$('div#graph').html('<img src="/graph?'+$(this).serialize()+'" /'+'>');
-            $('div#graph').html('<iframe src="/graph?'+$(this).serialize()+'" width="640" height="480"></iframe>');
+            $('div#graph').html('<iframe src="/graph-tag-user?'+$(this).serialize()+'" width="640" height="480"></iframe>');
             $('div#graph').fadeIn('slow');
         });
 
@@ -63,7 +63,7 @@
 <body>
 <div align="center">
   <h1>Dynamic graph generator</h1>
-  <form id="form" action="/graph" method="get">
+  <form id="form" action="/graph-tag-user" method="get">
     <table>
       <tr>
       <td>
