--- a/style/osmstats_style.css
+++ b/style/osmstats_style.css
@@ -58,7 +58,7 @@ table.tablesorter thead tr th, table.tablesorter tfoot tr th {
 }
 
 table.tablesorter thead tr .header {
-	background-image: url(img/bg.gif);
+	background-image: url(/img/bg.gif);
 	background-repeat: no-repeat;
 	background-position: center right;
 	border: 1px solid #98bf21;
@@ -78,11 +78,11 @@ table.tablesorter tbody tr.odd td {
 }
 
 table.tablesorter thead tr .headerSortUp {
-	background-image: url(img/asc.gif);
+	background-image: url(/img/asc.gif);
 }
 
 table.tablesorter thead tr .headerSortDown {
-	background-image: url(img/desc.gif);
+	background-image: url(/img/desc.gif);
 }
 
 table.tablesorter thead tr .headerSortDown, table.tablesorter thead tr .headerSortUp {
